redesigned SUIJob to be with more functionality..
Cleaned up FavUsersEditor a bit

added new Lucene 3.0

added explicit setting for each project to be compiled with UTF-8 charset
so no problems appear if workbenches are set to CP1252